<resources>
    <string name="app_name">Minha Lista de Compras</string>
    <string name="txtNomeProduto">Nome do Produto</string>
    <string name="txtValorProduto">0,00</string>
    <string name="SimboloReais">R$:</string>
    <string name="adicionarItem">Adicionar</string>
    <string name="LimparScan">Limpar Scan</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="qtdItens">100</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="gastosTotais">Gasto até o momento R$: 0,00</string>
    <string name="orcamentoInicial">Oramento Inicial R$:</string>
</resources>