<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:focusable="auto"
        app:autoFocusButtonVisible="true"
        app:frameAspectRatioWidth="1.8"
        app:frameSize="0.9"
        app:frameVisible="true"></com.budiyev.android.codescanner.CodeScannerView>


    <View
        android:id="@+id/view"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:background="#FFC107"
        android:focusable="auto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/txtNomeProduto"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_border"
        android:text="@string/txtNomeProduto"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/txtValorProduto"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue_border"
        android:text="@string/txtValorProduto"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/cmdAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionarItem"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="263dp" />

    <Button
        android:id="@+id/cmdLimparScanAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LimparScan"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/txtQtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qtdItens"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="270dp" />

    <Button
        android:id="@+id/cmdMais"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/mais"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="263dp" />

    <Button
        android:id="@+id/cmdMenos"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/menos"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="263dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/gastosTotais"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="696dp" />

    <EditText
        android:id="@+id/txtOrcamentoInicial"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:digits="1234567890.,"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/rvListaDeItens"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/orcamentoInicial"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtOrcamentoInicial"
        app:layout_constraintEnd_toStartOf="@+id/txtOrcamentoInicial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOrcamentoInicial" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaDeItens"
        android:layout_width="395dp"
        android:layout_height="270dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="371dp" />

    <Button
        android:id="@+id/cmdFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Finalizar"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="319dp" />

</androidx.constraintlayout.widget.ConstraintLayout>